fix api-docs
