# docs/swagger.json
@@ -39,7 +39,7 @@
       "description": "Manages communities operations, such as creating, modifying, and deleting communities"
     },
     {
-      "name": "Newsletter",
+      "name": "Channels",
       "description": "Handles WhatsApp Channel operations such as creating, modifying, deleting channels"
     },
     {
@@ -787,9 +787,9 @@
                 "adress": "Av. Nossa Senhora de Copacabana, 315",
                 "email": "test@test.com.br",
                 "categories": {
-                  "id": "133436743388217",
-                  "localized_display_name": "Artes e entretenimento",
-                  "not_a_biz": false
+                  "$id": "133436743388217",
+                  "$localized_display_name": "Artes e entretenimento",
+                  "$not_a_biz": false
                 },
                 "website": [
                   "https://www.wppconnect.io",
@@ -803,7 +803,7 @@
     },
     "/api/{session}/all-contacts": {
       "get": {
-        "tags": ["Contact"],
+        "tags": ["Contacts"],
         "description": "",
         "parameters": [
           {
@@ -824,7 +824,7 @@
     },
     "/api/{session}/contact/{phone}": {
       "get": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -863,7 +863,7 @@
     },
     "/api/{session}/profile-pic/{phone}": {
       "get": {
-        "tags": ["Contact"],
+        "tags": ["Contacts"],
         "description": "",
         "parameters": [
           {
@@ -909,7 +909,7 @@
     },
     "/api/{session}/profile-status/{phone}": {
       "get": {
-        "tags": ["Contact"],
+        "tags": ["Contacts"],
         "description": "",
         "parameters": [
           {
@@ -1090,7 +1090,7 @@
     },
     "/api/{session}/list-chats": {
       "post": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "summary": "Retrieve a list of chats",
         "description": "This body is not required. Not sent body to get all chats or filter.",
         "parameters": [
@@ -1187,7 +1187,7 @@
     },
     "/api/{session}/all-chats-archived": {
       "get": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "Retrieves all archived chats.",
         "parameters": [
           {
@@ -1247,7 +1247,7 @@
     },
     "/api/{session}/all-unread-messages": {
       "get": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -1277,7 +1277,7 @@
     },
     "/api/{session}/chat-by-id/{phone}": {
       "get": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -1324,7 +1324,7 @@
     },
     "/api/{session}/chat-is-online/{phone}": {
       "get": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -1363,7 +1363,7 @@
     },
     "/api/{session}/last-seen/{phone}": {
       "get": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -1402,7 +1402,7 @@
     },
     "/api/{session}/list-mutes/{type}": {
       "get": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -1441,7 +1441,7 @@
     },
     "/api/{session}/message-by-id/{messageId}": {
       "get": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -1477,7 +1477,7 @@
     },
     "/api/{session}/archive-chat": {
       "post": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -1537,7 +1537,7 @@
     },
     "/api/{session}/archive-all-chats": {
       "post": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -1567,7 +1567,7 @@
     },
     "/api/{session}/clear-chat": {
       "post": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -1620,7 +1620,7 @@
     },
     "/api/{session}/clear-all-chats": {
       "post": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -1650,7 +1650,7 @@
     },
     "/api/{session}/delete-chat": {
       "post": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -1703,7 +1703,7 @@
     },
     "/api/{session}/delete-all-chats": {
       "post": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -1789,7 +1789,7 @@
     },
     "/api/{session}/send-seen": {
       "post": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -1842,7 +1842,7 @@
     },
     "/api/{session}/send-mute": {
       "post": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -1906,7 +1906,7 @@
     },
     "/api/{session}/pin-chat": {
       "post": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -1986,7 +1986,7 @@
     },
     "/api/{session}/typing": {
       "post": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -2046,7 +2046,7 @@
     },
     "/api/{session}/recording": {
       "post": {
-        "tags": ["Chat"],
+        "tags": ["Chats"],
         "description": "",
         "parameters": [
           {
@@ -3951,7 +3951,7 @@
     },
     "/api/{session}/common-groups/{wid}": {
       "get": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -3997,7 +3997,7 @@
     },
     "/api/{session}/group-admins/{groupId}": {
       "get": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4058,7 +4058,7 @@
     },
     "/api/{session}/group-invite-link/{groupId}": {
       "get": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4111,7 +4111,7 @@
     },
     "/api/{session}/group-members-ids/{groupId}": {
       "get": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4150,7 +4150,7 @@
     },
     "/api/{session}/group-members/{groupId}": {
       "get": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4188,7 +4188,7 @@
     },
     "/api/{session}/group-revoke-link/{groupId}": {
       "get": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4229,7 +4229,7 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "groupId": {
+                  "$groupId": {
                     "type": "string"
                   }
                 }
@@ -4241,7 +4241,7 @@
     },
     "/api/{session}/create-group": {
       "post": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4301,7 +4301,7 @@
     },
     "/api/{session}/group-subject": {
       "post": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4349,7 +4349,7 @@
     },
     "/api/{session}/group-description": {
       "post": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4397,7 +4397,7 @@
     },
     "/api/{session}/group-pic": {
       "post": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4448,7 +4448,7 @@
     },
     "/api/{session}/group-property": {
       "post": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4508,7 +4508,7 @@
     },
     "/api/{session}/messages-admins-only": {
       "post": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4541,10 +4541,10 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "groupId": {
+                  "$groupId": {
                     "type": "string"
                   },
-                  "value": {
+                  "$value": {
                     "type": "boolean"
                   }
                 }
@@ -4556,7 +4556,7 @@
     },
     "/api/{session}/promote-participant-group": {
       "post": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4613,7 +4613,7 @@
     },
     "/api/{session}/demote-participant-group": {
       "post": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4670,7 +4670,7 @@
     },
     "/api/{session}/add-participant-group": {
       "post": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4727,7 +4727,7 @@
     },
     "/api/{session}/remove-participant-group": {
       "post": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4784,7 +4784,7 @@
     },
     "/api/{session}/group-info-from-invite-link": {
       "post": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4829,7 +4829,7 @@
     },
     "/api/{session}/change-privacy-group": {
       "post": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4862,10 +4862,10 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "groupId": {
+                  "$groupId": {
                     "type": "string"
                   },
-                  "status": {
+                  "$status": {
                     "type": "boolean"
                   }
                 }
@@ -4877,7 +4877,7 @@
     },
     "/api/{session}/join-code": {
       "post": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -4933,7 +4933,7 @@
     },
     "/api/{session}/leave-group": {
       "post": {
-        "tags": ["Group"],
+        "tags": ["Groups"],
         "description": "",
         "parameters": [
           {
@@ -5354,7 +5354,7 @@
     },
     "/api/{session}/newsletter": {
       "post": {
-        "tags": [],
+        "tags": ["Channels"],
         "description": "",
         "operationId": "createNewsletter",
         "parameters": [
@@ -5366,14 +5366,6 @@
               "type": "string",
               "example": "60123456789"
             }
-          },
-          {
-            "name": "id",
-            "schema": {
-              "type": "string",
-              "example": "<newsletter_id>"
-            },
-            "in": "query"
           }
         ],
         "responses": {
@@ -5396,22 +5388,12 @@
                   "name": {
                     "type": "string"
                   },
-                  "description": {
-                    "type": "string"
-                  },
-                  "picture": {
-                    "type": "string"
+                  "options": {
+                    "type": "object"
                   }
                 }
               },
               "examples": {
-                "Edit newsletter/channel": {
-                  "value": {
-                    "name": "New name of channel",
-                    "description": "New description of channel",
-                    "picture": "<new_base64_image> or send null"
-                  }
-                },
                 "Create newsletter/channel": {
                   "value": {
                     "name": "Name for your channel",
@@ -5429,7 +5411,7 @@
     },
     "/api/{session}/newsletter/{id}": {
       "put": {
-        "tags": [],
+        "tags": ["Channels"],
         "description": "",
         "operationId": "editNewsletter",
         "parameters": [
@@ -5448,7 +5430,7 @@
             "required": true,
             "schema": {
               "type": "string",
-              "example": "NEWSLETTER ID"
+              "example": "<newsletter_id>"
             }
           }
         ],
@@ -5503,7 +5485,7 @@
         }
       },
       "delete": {
-        "tags": [],
+        "tags": ["Channels"],
         "description": "",
         "operationId": "destroyNewsletter",
         "parameters": [
@@ -5540,7 +5522,7 @@
     },
     "/api/{session}/mute-newsletter/{id}": {
       "post": {
-        "tags": [],
+        "tags": ["Channels"],
         "description": "",
         "operationId": "muteNewsletter",
         "parameters": [
@@ -5564,8 +5546,8 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "201": {
+            "description": "Created"
           }
         },
         "security": [
@@ -5643,10 +5625,10 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "name": {
+                  "$name": {
                     "type": "string"
                   },
-                  "options": {
+                  "$options": {
                     "type": "object",
                     "properties": {
                       "labelColor": {
